adjusted and fixed ui
* recipe image in details page is now more visually asthetic, used animation to it on nlarge and regular
* recipe image is now onl using its card as a means of circulasr visual as well removed that extra componnet whicg was responsible for it
* when recipe names are to big in unrelated recipes list they are truncated and shown an ellipsis along with title attribute whih shows full recipe name on hover
* added recipe source to detail page view as well
* added, adjusted markup and ui as needed
* in recipe css module kept rotation animation in it for future references

--- a/src/components/forRecipe/Recipe.module.css
+++ b/src/components/forRecipe/Recipe.module.css
@@ -125,6 +125,25 @@
     }
 }
 
+@keyframes spinOnce {
+    40% {
+        transform: rotate(90deg);
+    }
+    60% {
+        transform: rotate(180deg);
+    }
+    80% {
+        transform: rotate(270deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.fullSpinOnce {
+    animation: spinOnce .7s ease-in-out 1 alternate-reverse;
+}
+
 @keyframes spin {
     to {
         transform: scale(100%) rotate(360deg);
